--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1076,8 +1076,10 @@
             <details>
             <summary id="bx_24">Box 24&nbsp;– EI insurable earnings</summary>
             <p><strong>You must report </strong>an amount in Box 24.</p>
-            <p>Report the <strong>total </strong>amount of insurable earnings you used to calculate your employee's EI premiums that you reported in box 18, up to the maximum insurable earnings for the year. In many cases, boxes 14 and 24 will be the same amount.</p>
-            <p>Report "0" if there are no insurable earnings and there is no amount in box 18.</p>
+            <p>Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's EI premiums that you reported using box 18, up to the maximum insurable earnings for the year. </p>
+            <p>Report "0" if the employee had no insurable earnings and you did not report an amount in box 18.</p>
+		<p>    In many cases, boxes 14 and 24 will be the same amount.</p>
+
             <p><strong>Do not </strong>report these amounts in box 24:</p>
             <ul>
             <li>Amounts paid to your employee for employment, benefits, or other payments that should not have EI premiums deducted (learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Determine if a special payment is taxable, pensionable or insurable</a>) </li>
