--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1075,10 +1075,10 @@
 		<li class="code-num">    
             <details>
             <summary id="bx_24">Box 24&nbsp;– EI insurable earnings</summary>
-            <p><strong>You must report </strong>an amount in Box 24.</p>
-            <p>Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's EI premiums that you reported using box 18, up to the maximum insurable earnings for the year. </p>
+            
+            <p>Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's EI premiums that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
             <p>Report "0" if the employee had no insurable earnings and you did not report an amount in box 18.</p>
-		<p>    In many cases, boxes 14 and 24 will be the same amount.</p>
+		<p>In many situations, boxes 14 and 24 will be the same amount.</p>
 
             <p><strong>Do not </strong>report these amounts in box 24:</p>
             <ul>
