--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -850,6 +850,7 @@ margin-left: 38px;
 
 		
 	</details>
+	</details>
         <details><summary>Tax identifier numbers for corporations</summary>
         <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
         <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
