--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1085,16 +1085,26 @@
             <li>Amounts paid to your employee for employment, benefits, or other payments that should not have EI premiums deducted (learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Determine if a special payment is taxable, pensionable or insurable</a>) </li>
             <li>The unpaid portion of any earnings from insurable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities </li>
             </ul>
-            <h4>More than one T4 slip for the same employee</h4>
-            <p>When you give the same employee more than one T4 slip for the year, you should report the insurable earnings amount for each period of employment in box 24 of each T4 slip.</p>
-            <h5>Example</h5>
+            <h4>Reporting the correct EI insurable earnings</h4>
+            <p>Reporting the correct EI insurable earnings in box 24 will reduce unnecessary pensionable and insurable earnings review (PIER) reports for EI deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p>
+
+    <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+
+<dt>More than 1 slip for the same employee</dt>
+<dd><p>Report the insurable earnings amount for each period of employment in box 24 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
+            <details><summary>Example</summary>
             <p>An employee earned $30,000 working in Ontario from January 2021 to June 2021 and earned $30,000 working in Quebec for the remainder of the year with the same employer. In addition to any other boxes that need to be filled out, report amounts in boxes 14 and 24 as follows:</p>
             <ul>
             <li>Ontario T4 slip &ndash; box 14 = $30,000 and box 24 = $30,000 </li>
             <li>Quebec T4 slip &ndash; box 14 = $30,000 and box 24 = $26,300 (calculated as the maximum insurable earnings for 2021 of $56,300 &ndash; $30,000 already reported on T4 slip with Ontario as province of employment = $26,300) </li>
-            </ul>
-            <h4>Reporting the correct EI insurable earnings</h4>
-            <p>Reporting the correct EI insurable earnings in box 24 will reduce unnecessary pensionable and insurable earnings review (PIER) reports for EI deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p>
+            </ul> </details>
+            </dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+</dl>    
             </details>
 </li>
 
