--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -851,17 +851,30 @@ margin-left: 38px;
 		
 	</details>
 	</details>
-        <details><summary>Tax identifier numbers for corporations</summary>
-        <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
-        <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
-        <p>If you do not have a BN, you must apply for one <strong>and</strong> register your RU program account before you can file your return.</p>
-        <p>You can register for your RU program account online through: <a href="https://canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program account</a></p>
-       <strong>Help with applying for a business number</strong>
-		<p>If you are a non-resident corporation and you have a question about obtaining a BN or registering your RU program account, the physical location of your business outside Canada will determine the telephone number that you must use to call the CRA. </p>
-		<p>To determine which phone number is applicable to you, refer to: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/non-resident-gst-hst-enquiries.html">Non-resident GST/HST Enquiries</a>.</p>
+
 		
-		<p><strong>[Distinguish how to get an RU #]</strong></p>
-		<p></p>
+        <details><summary>Tax identifier numbers for corporations</summary>
+        <p>If you are a corporation, you must file your return using a BN <strong>and</strong> an RU program account identifier code.</p> 
+        <details>
+		<summary>Canadian business</summary>
+		<p>Refer to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#BRO" target="_blank">Business Registration Online</a> to:</p>
+		<ul><li>Get a business number (BN)</li></ul>
+<ul><li>Get an Underused Housing Tax (RU) program account identifier code</li></ul>
+		<details>
+			<summary>If your business is in Quebec</summary>
+			<p>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#bissque" target="_blank">Business Registration Online</a> to:</p>
+		</details>
+	</details>
+
+		<details>
+			<summary>Non-resident business</summary>
+			<p>If you need to get a business number (BN), register through (Non-res business # anchor link)</p>
+			<p>If you need to get an Underused Housing Tax (RU) program account identifier code, register through (Non-res UHT anchor link)</p>
+			<p>If you are a non-resident corporation and you have a question about obtaining a BN or registering your RU program account, the physical location of your business outside Canada will determine the telephone number that you must use to call the CRA.</p>
+<p>To determine which phone number is applicable to you, refer to: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/non-resident-gst-hst-enquiries.html" target="_blank">Non-resident enquiries</a></p>
+		</details>
+
+		
 	  </details>
 	</details>
 
