--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -862,7 +862,7 @@ margin-left: 38px;
 <ul><li>Get an Underused Housing Tax (RU) program account identifier code</li></ul>
 		<details>
 			<summary>If your business is in Quebec</summary>
-			<p>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#bissque" target="_blank">Business Registration Online</a> to:</p>
+			<p>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#bissque" target="_blank">Businesses operating in Quebec</a></p>
 		</details>
 	</details>
 
