--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1085,8 +1085,7 @@
             <li>Amounts paid to your employee for employment, benefits, or other payments that should not have EI premiums deducted (learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Determine if a special payment is taxable, pensionable or insurable</a>) </li>
             <li>The unpaid portion of any earnings from insurable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities </li>
             </ul>
-            <h4>Reporting the correct EI insurable earnings</h4>
-            <p>Reporting the correct EI insurable earnings in box 24 will reduce unnecessary pensionable and insurable earnings review (PIER) reports for EI deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p>
+        
 
     <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -1101,8 +1100,17 @@
             </ul> </details>
             </dd>
 
-<dt>Add title</dt>
-<dd>Add situation</dd>
+<dt>Correct deduction errors</dt>
+<dd><p>Report the correct EI insurable earnings in box 24. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for EI deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
+    <p>Learn more:</p> 
+  <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
+<li><a href="/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a> </li>
+        </ul>
+  </dd>
+
+
+</dd>
 
 </dl>    
             </details>
