--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1074,7 +1074,7 @@
 </li>
 		<li class="code-num">    
             <details>
-            <summary id="bx_24">Box 24&nbsp;– EI insurable earnings</summary>
+            <summary id="bx_24">Box 24 – EI insurable earnings <span class="label label-info">Jeremiah</span></summary>
             
             <p>Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's EI premiums that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
             <p>Report "0" if the employee had no insurable earnings and you did not report an amount in box 18.</p>
