--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1080,15 +1080,20 @@
             <p>Report "0" if the employee had no insurable earnings and you did not report an amount in box 18.</p>
 		<p>In many situations, boxes 14 and 24 will be the same amount.</p>
 
-            <p><strong>Do not </strong>report these amounts in box 24:</p>
-            <ul>
-            <li>Amounts paid to your employee for employment, benefits, or other payments that should not have EI premiums deducted (learn more: <a href="/cra-arc/payroll/calculate/payment/index.html">Determine if a special payment is taxable, pensionable or insurable</a>) </li>
-            <li>The unpaid portion of any earnings from insurable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities </li>
-            </ul>
         
-
     <h4>Specific situations</h4>
 <dl class="dl-horizontal">
+<dt>No EI premiums deductions required</dt>
+<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have EI premiums deducted using box 24. </p>
+
+<p>The unpaid portion of any earnings from insurable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities.</p>
+
+<p>Learn more:</p>
+<ul> 
+<li><a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></li>
+<li> <a href="/cra-arc/payroll/calculate/payment/index.html">Determine the tax treatment of payments other than regular employment income</a></li>
+</ul>
+</dd>
 
 <dt>More than 1 slip for the same employee</dt>
 <dd><p>Report the insurable earnings amount for each period of employment in box 24 of each T4 slip if you give the same employee more than one T4 slip for the year.</p>
@@ -1109,8 +1114,8 @@
         </ul>
   </dd>
 
-
-</dd>
+<dt></dt>
+<dd></dd>
 
 </dl>    
             </details>
