--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -868,7 +868,7 @@ margin-left: 38px;
 
 		<details>
 			<summary>Non-resident business</summary>
-			<p>If you need to get a business number (BN), register through (Non-res business # anchor link)</p>
+			<p>If you need to get a business number (BN), register through <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#NR-BN_AccRegistrtn_Webform" target="_blank">Businesses operating in Quebec</a></p>
 			<p>If you need to get an Underused Housing Tax (RU) program account identifier code, register through (Non-res UHT anchor link)</p>
 			<p>If you are a non-resident corporation and you have a question about obtaining a BN or registering your RU program account, the physical location of your business outside Canada will determine the telephone number that you must use to call the CRA.</p>
 <p>To determine which phone number is applicable to you, refer to: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/non-resident-gst-hst-enquiries.html" target="_blank">Non-resident enquiries</a></p>
