--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -860,7 +860,7 @@ margin-left: 38px;
 		<p>Refer to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#BRO" target="_blank">Business Registration Online</a> to:</p>
 		<ul><li>Get a business number (BN)</li></ul>
 <ul><li>Get an Underused Housing Tax (RU) program account identifier code</li></ul>
-		<details>
+		<details class="mrgn-tp-md">
 			<summary>If your business is in Quebec</summary>
 			<p>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#bissque" target="_blank">Businesses operating in Quebec</a></p>
 		</details>
