--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -274,86 +274,7 @@
                   </dl>
                </div>
             </details>
-            <details>
-               <summary>Self-employed fishing income</summary>
-               <div id="ajax-fish1">
-                  <p id="fish">Fishing income is reported on a T4 slip. If you paid:</p>
-                  <ul>
-                     <li>the worker both self-employed and employment income, and are reporting both on the same T4 slip, use the regular instructions for the portion that is employment income. </li>
-                     <li>tax-exempt fishing income to a self-employed Indian, see <a href="#indian1">Indians employees</a>. </li>
-                  </ul>
-                  <p>If the worker is <strong>self-employed</strong>:</p>
-                  <ul>
-                     <li>they are responsible for their own CPP and income tax </li>
-                     <li>you have to pay both the worker's share and your share of EI premiums, learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a> </li>
-                     <li>you have to file a T4 slip to show EI and PPIP premiums remitted on their behalf </li>
-                  </ul>
-                  <p>Fishing income (for example, proceeds of the catch paid to a self-employed fisher) and employment income (for example, plant income) can be reported on the same T4 slip or on separate T4 slips. </p>
-                  <h4>Cash and accrual methods of accounting</h4>
-                  <p>Whether you report self-employed fisher income that is payable or paid depends on whether you are using the cash method or accrual method of accounting. </p>
-                  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/farmers-fishers/reporting-income-loss-farmers-fishers.html">Reporting income and loss &ndash; farmers and fishers</a></p>
-                  <dl class="dl-horizontal">
-                  <dt>Box 14 &ndash; Employment income</dt>
-                  <dd>
-                     <p><strong>Do not </strong>report self-employed fishing income in box 14. </p>
-                     <p>You need to report these amounts in "Other information", using<strong> codes 78, 79 or 80</strong>.</p>
-                  </dd>
-                
-                  <dt>Box 24 &ndash; EI insurable earnings</dt>
-                  <dd>
-                     <p>If you are a designated employer, report the amount of the fisher's insurable earnings using the applicable method.</p>
-                     <ul>
-                        <li>
-                           <strong>Type 1 fisher</strong>
-                           <p>A type 1 fisher is a member of a crew that either:</p>
-                           <ul>
-                              <li>owns or leases the boat or specialized fishing gear used to make a catch </li>
-                              <li>employs other persons under a contract of service to make a catch </li>
-                           </ul>
-                           <p>To calculate the insurable earnings for a type 1 fisher, start with the <strong>gross value </strong>of the catch, not including the value of any part of a catch the crew did not make and subtract <strong>all </strong>of the following:</p>
-                           <ul>
-                              <li>25% of the gross value of the catch </li>
-                              <li>the amounts paid or payable to other members of the crew according to the share arrangement </li>
-                              <li>the total amount of wages paid to others employed, as employees, to make a catch </li>
-                           </ul>
-                        </li>
-                        <li>
-                           <strong>Type 2 fisher</strong>
-                           <p>For all other self-employed fishers, the insurable earnings are the amount paid or payable to the fisher, up to the maximum insurable earnings, from the proceeds of a catch based on the sharing arrangement agreed to before embarking on the fishing trip.</p>
-                           <p><strong>Do not </strong>include any amount paid for a catch or any part of a catch made by other persons who were not members of the fisher's crew.</p>
-                           <p>Report "0" if there are no insurable earnings.</p>
-                           <p>Learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a></p>
-                   </li></ul></dd>
-                  <dt>Box 28 &ndash; Exempt (CPP/QPP, EI, and PPIP)</dt><dd>
-                  <p>Enter an "X" or a check mark under CPP/QPP.</p>
-                  </dd><dt>Box 29 &ndash; Employment code</dt><dd>
-                  <p>Enter <strong>code 17</strong>.</p>
-                  </dd><dt>Box 55 &ndash; Employee's PPIP premiums</dt><dd>
-                  <p>If the self-employed fisher worked in Quebec, report the PPIP premiums you remitted on their gross income. </p>
-                  </dd><dt>Box 56 &ndash; PPIP insurable earnings</dt><dd>
-                  <p>If the fisher worked in Quebec, report the <strong>total </strong>amount used to calculate their PPIP premiums. </p>
-                  <p>The instructions for calculating PPIP insurable earnings are the same as for calculating EI premiums.</p>
-                  </dd><dt>Other information</dt><dd>
-                  <ul>
-                  <li><strong>Code 78 &ndash; Fishers &ndash; Gross income</strong>
-                  <p>Enter code 78 and report the amount paid or payable to the fisher from the proceeds of a catch. </p>
-                  <p>You also need to report either the net partnership or owner amount using code 79 <strong>or </strong>the shareperson amount using code 80.</p>
-                  <p><strong>Do not </strong>report this amount in box 14.</p>
-                  <p>Learn more: <a href="/cra-arc/payroll/calculate/situation/index.html">Determine if a special situation is taxable, pensionable or insurable</a></p>
-                  </li>
-                  <li><strong>Code 79 &ndash; Fishers &ndash; Net partnership amount</strong>
-                  <p>Enter code 79 and  the amount that is the product of the gross income (or gross value of the catch) reported under code 78, minus the 25% prescribed amount and the total amount paid to the shareperson reported under code 80, multiplied by your partnership agreement allocation. </p>
-                  <p>Include this amount in box 24 &ndash; EI insurable earnings (and in box 56 if the fisher in Quebec).</p>
-                  <p><strong>Do not </strong>report this amount in box 14.</p>
-                  </li>
-                  <li><strong>Code 80 &ndash; Fishers &ndash; Shareperson amount</strong>
-                  <p>Enter code 80 and  the amount paid or payable to the fisher from the proceeds of a catch based on the sharing arrangement agreed to before embarking on the fishing trip.</p>
-                  <p>Include this amount in box 24 &ndash; EI insurable earnings ( and in box 56 if the fisher in Quebec) and with code 78</p>
-                  <p><strong>Do not </strong>report this amount in box 14.</p>
-                  </li>
-                  </ul>
-              </dd></dl> </div>
-            </details>
+          
       <details>
             <summary>Placement or employment agency workers</summary>
             <div id="ajax-agency1">
@@ -772,7 +693,7 @@
 	<li>12 - Taxi drivers and drivers of other passenger-carrying vehicles, use <a href="#cd_82">code 82</a></li>
 	<li>13 - Barber or hairdresser, use <a href="#cd_83">code 83</a></li>
 	<li>16 - Detached employee – Social security agreement, and no other type of income is reported on the T4 slip</li>
-	<li>17 - Self-employed fishing income, use <a href="#cd_78">code 78</a></li>
+	<li>17 - Self-employed fishing income, use <a href="#cd_78">code 78</a>, <a href="#cd_79">code 79</a> or <a href="#cd_80">code 80</a></li>
 	<li>12, 13 or 17 - Worker who is registered, or entitled to be registered under the Indian Act, use <a href="#cd_88">code 88</a></li>
 	
 </ul>
@@ -1180,11 +1101,18 @@
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd></dd>
+<dt>Box 29 - Employment codes</dt>
+<dd><p>Enter an "X" or a check mark under CPP/QPP if you are using <a href="#bx_29">box 29</a> with the employment code:</p>
+<ul>
+	<li>11 - Placement or employment agency worker</li>
+	<li>12 - Taxi drivers and drivers of other passenger-carrying vehicles, including workers who are registered, or entitled to be registered under the Indian Act <span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
+	<li>13 - Barber or hairdresser, including workers who are registered, or entitled to be registered under the Indian Act</li>
+	<li>16 - Detached employee – Social security agreement</li>
+	<li>17 - Self-employed fishing income, including workers who are registered, or entitled to be registered under the Indian Act</li>
+		
+</ul>
+</dd>
 
-<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
-<dd>Add situation</dd>
 
 <dt>Add title</dt>
 <dd>Add situation</dd>
