--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -832,18 +832,26 @@ margin-left: 38px;
         <details><summary>Tax identifier numbers for individuals</summary>
         <p>Depending on your citizenship, if you are an individual, you must file your return using either a SIN, an ITN, or a TTN.</p>
 <h4>Canadian citizens or permanent residents</h4>
-		<p>You must use your SIN to file your return. If you do not already have a SIN, you must <a href="https://www.canada.ca/en/employment-social-development/services/sin/apply.html" target="_blank">apply for a SIN</a>.</p>
+		<p>You <strong>must</strong> use your SIN to file your return.</p>
+		<p>If you do not already have a SIN, you must apply for one.</p>
+<p><a href="https://www.canada.ca/en/employment-social-development/services/sin/apply.html" target="_blank">Apply for a SIN</a></p>
+		
 		<h4>Non-residents or temporary residents to Canada</h4>
-<p>If you already have a SIN, you must use it to file your return. If you do not have a SIN, you must use your ITN or TTN to file your return.</p>
+<p>If you already have a SIN, you must use it to file your return.</p>
+		<p>If you do not have a SIN, you must use your ITN or TTN to file your return.</p>
 
 		<details>
-<summary>Non-residents</summary>
-		<p>If you do not have an ITN, you must <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank"> apply for an ITN</a>.</p>
+<summary>Non-residents (use an ITN)</summary>
+		<p>If you do not have an ITN, you must apply for one.</p>
+
+
+<p><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank">Apply for an ITN</a></p>
+			
 <p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out the application form (Form T1261) and attaching it with your completed return.</p>
 		<p>Make sure to file your ITN application form, all required supporting documentation, and your Underused Housing Tax return together.</p>
 		</details>
 		<details>
-		<summary>Temporary residents</summary>
+		<summary>Temporary residents (use a TTN)</summary>
 	<p>If you do not have a TTN, you must ..... </p>
 
 
@@ -856,22 +864,22 @@ margin-left: 38px;
         <details><summary>Tax identifier numbers for corporations</summary>
         <p>If you are a corporation, you must file your return using a BN <strong>and</strong> an RU program account identifier code.</p> 
         <details>
-		<summary>Canadian business</summary>
+		<summary>Canadian corporations/summary>
 		<p>Refer to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#BRO" target="_blank">Business Registration Online</a> to:</p>
 		<ul><li>Get a business number (BN)</li></ul>
 <ul><li>Get an Underused Housing Tax (RU) program account identifier code</li></ul>
 		<details class="mrgn-tp-md">
-			<summary>If your business is in Quebec</summary>
+			<summary>If your corporation is in Quebec</summary>
 			<p>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#bissque" target="_blank">Businesses operating in Quebec</a></p>
 		</details>
 	</details>
 
 		<details>
-			<summary>Non-resident business</summary>
-			<p>If you need to get a business number (BN), register through <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#NR-BN_AccRegistrtn_Webform" target="_blank">Businesses operating in Quebec</a></p>
-			<p>If you need to get an Underused Housing Tax (RU) program account identifier code, register through (Non-res UHT anchor link)</p>
+			<summary>Corporations outside of Canada</summary>
+			<p>If you need to get a business number (BN), register through: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#NR-BN_AccRegistrtn_Webform" target="_blank">Non-resident business number</a>.</p>
+			<p>If you need to get an Underused Housing Tax (RU) program account identifier code, register through: <mark>(Non-res UHT anchor link)</mark></p>
 			<p>If you are a non-resident corporation and you have a question about obtaining a BN or registering your RU program account, the physical location of your business outside Canada will determine the telephone number that you must use to call the CRA.</p>
-<p>To determine which phone number is applicable to you, refer to: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/non-resident-gst-hst-enquiries.html" target="_blank">Non-resident enquiries</a></p>
+<p>To determine which phone number is applicable to you, refer to: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/non-resident-gst-hst-enquiries.html" target="_blank">Non-resident enquiries</a>.</p>
 		</details>
 
 		
