--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -864,7 +864,7 @@ margin-left: 38px;
         <details><summary>Tax identifier numbers for corporations</summary>
         <p>If you are a corporation, you must file your return using a BN <strong>and</strong> an RU program account identifier code.</p> 
         <details>
-		<summary>Canadian corporations/summary>
+		<summary>Canadian corporations</summary>
 		<p>Refer to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html#BRO" target="_blank">Business Registration Online</a> to:</p>
 		<ul><li>Get a business number (BN)</li></ul>
 <ul><li>Get an Underused Housing Tax (RU) program account identifier code</li></ul>
