--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -626,7 +626,7 @@
             <ul>
             <li>Commissions, taxable allowances, the value of taxable benefits (including any GST/HST or other applicable taxes), and any other payments you paid to employees during the year. These amounts may also have to be reported in the "Other information" section area at the bottom of the T4 slip </li>
             <li>Payments made from a wage-loss replacement plan (WLRP) if you had to deduct CPP contributions or EI premiums. </li>
-            <li>Amounts paid under a <strong>supplementary unemployment benefit plan </strong>(SUBP) such as employer-paid maternity, parental, and compassionate care top-up amounts, whether they are registered with Service Canada or not</li>
+           
             <li>
             Payments out of an employee benefit plan (EBP) and amounts that a trustee allocated under an <strong>employee trust</strong> 
             <ul>
@@ -638,6 +638,11 @@
 
   <h4>Specific situations</h4>
 <dl class="dl-horizontal">
+<dt><abbr title="Supplementary unemployment benefit plan">SUBP</abbr> payments</dt>
+<dd><p>Report payments you made for maternity, parental and compassionate care top ups under a supplementary unemployment benefit plan (<abbr title="Supplementary unemployment benefit plan">SUBP</abbr>), whether they are registered with Services Canada or not using box 14. </p> 
+<p><strong>Do not</strong> other amounts that are not related to top ups using box 14, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip</a>.</p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/subp.html">Payments from supplementary unemployment benefit plan (SUBP)</a></p>      
+</dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not</strong> report tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using box 014, use <a href="#cd_71">code 71</a> or for a self-employed worker use <a href="#cd_88">code 88</a>.
