--- a/payroll/calculate/when/learnit.html
+++ b/payroll/calculate/when/learnit.html
@@ -135,7 +135,8 @@
 <p>Learn more: <a href="/cra-arc/payroll/employee/poe.html">Determine the province of employment (POE)</a></p>
 
 <p>Generally, you have to deduct income tax from:</p>
-
+<div id="ajax-deduct">
+           
   <ul class="fa-ul">
 	      <li><span class="fas fa-check fa-li text-success"></span> Salary, wages, commissions or other remuneration including taxable benefits </li>
 <li><span class="fas fa-check fa-li text-success"></span> Honorariums from employment or office, director's fees, management fees, fees paid to board or committee members and executor's, liquidator's, or administrator's fees earned to administer an estate (as long as the executor, liquidator, or administrator <strong>does not act in this capacity </strong>in the regular course of business). </li>
@@ -147,7 +148,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> <strong>Additional </strong>amounts that <strong>you pay </strong>while participating in a job creation project that Employment and Social Development Canada (ESDC) has approved. </li>
 <li><span class="fas fa-check fa-li text-success"></span> Remuneration paid to a member of a religious order who has taken a vow of perpetual poverty, unless you pay the remuneration to the order or the employee gives you a letter of authority. </li>
 </ul>
-
+</div>
 <p>To determine if you need to deduct income tax, refer to:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
