--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -605,6 +605,15 @@
             <details>
             <summary id="bx_14">Box 14&nbsp;– Employment income</summary>
             <p>Report your employee's total income before deductions using box 14. </p>
+
+<p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
+
+<p>Learn more:</p>
+<ul> 
+<li><a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></li>
+<li> <a href="/cra-arc/payroll/calculate/payment/index.html">Determine the tax treatment of payments other than regular employment income</a></li>
+</ul>
+
  <details> <summary>Type of payment included in employment income </summary>
 <p>Generally, you have to report using box 14 from:</p>
     <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/when/learnit.html#ajax-deduct"></div></p>
@@ -614,17 +623,6 @@
 
   <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Benefits and payments other than regular employment income</dt>
-<dd><p>Report amounts paid for commissions, taxable allowances, the value of taxable benefits (including any GST/HST or other applicable taxes), and any other payments you paid to employees during the year using box 14. </p>
-
-<p>Depending on the type of payment, you may also need to report these amounts in "Other information" using specific codes. </p>
-
-<p>Learn more:</p>
-<ul> 
-<li><a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></li>
-<li> <a href="/cra-arc/payroll/calculate/payment/index.html">Determine the tax treatment of payments other than regular employment income</a></li>
-</ul>
-</dd>
 
 <dt><abbr title="Supplementary unemployment benefit plan">SUBP</abbr> payments</dt>
 <dd><p>Report payments you made for maternity, parental and compassionate care top ups under a supplementary unemployment benefit plan (<abbr title="Supplementary unemployment benefit plan">SUBP</abbr>), whether they are registered with Services Canada or not using box 14. </p> 
