--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -603,7 +603,7 @@
 
 	<li class="code-num">
             <details>
-            <summary id="bx_14">Box 14&nbsp;– Employment income</summary>
+            <summary id="bx_14">Box 14 – Employment income <span class="label label-info">Jeremiah</span></summary>
             <p>Report your employee's total income before deductions using box 14. </p>
 
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
