--- a/subway/lines/adoption/index.html
+++ b/subway/lines/adoption/index.html
@@ -64,13 +64,14 @@
 					 <p>The maximum claim for each child:</p>
 						<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
   <li class="cnjnctn-col-50"><img src="../flag-ca.jpg" alt=""> <strong>Everyone</strong> can claim a maximum of $17,131 of expenses on the federal tax return</li>
-						<li class="cnjnctn-col">In addition, <strong>residents</strong> in certain provinces and territories can <strong>also</strong> claim the expenses on their provincial or territorial tax returns:
+						<li class="cnjnctn-col">In addition, <strong>residents</strong> in certain provinces or territories can <strong>also</strong> claim the expenses on their provincial or territorial tax return:
 						<ul class="list-unstyled">
 						<li> <img src="../flag-ab.jpg" alt=""> Alberta: $13,552 maximum</li>
 						<li><img src="../flag-bc.jpg" alt=""> BC: $17,131 maximum</li>
 						<li><img src="../flag-mn.jpg" alt=""> Manitoba: $10,000 maximum</li>
 						<li><img src="../flag-nl.jpg" alt=""> Newfoundland and Labrador: $13,230 maximum</li>
 						<li><img src="../flag-on.jpg" alt=""> Ontario: $13,593 maximum</li>
+						<li><img src="../flag-qc.jpg" alt=""> Quebec: Refer to <a href="https://www.revenuquebec.ca/en/">Revenu Quebec</a></li>
 						<li><img src="../flag-yt.jpg" alt=""> Yukon: $17,131 maximum</li>
 						
 						</ul>
