--- a/subway/lines/adoption/index.html
+++ b/subway/lines/adoption/index.html
@@ -63,8 +63,8 @@
 					 <p>You can claim an amount for eligible adoption expenses related to the adoption of a child who is under 18 years of age at the time that the adoption order is issued or recognized by a government in Canada.</p>
 					 <p>The maximum claim for each child:</p>
 						<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-  <li class="cnjnctn-col-50"><img src="../flag-ca.jpg" alt=""> <strong>Everyone</strong> can claim a maximum of $17,131 of expenses on the federal tax return</li>
-						<li class="cnjnctn-col">In addition, <strong>residents</strong> in certain provinces or territories can <strong>also</strong> claim the expenses on their provincial or territorial tax return:
+  <li class="cnjnctn-col-50"><img src="../flag-ca.jpg" alt=""> <strong>Everyone</strong> can claim a maximum of $17,131 of expenses on the <strong>federal</strong> tax return</li>
+						<li class="cnjnctn-col">In addition, <strong>residents</strong> in certain provinces or territories can <strong>also</strong> claim the expenses on a <strong>provincial or territorial</strong> tax return:
 						<ul class="list-unstyled">
 						<li> <img src="../flag-ab.jpg" alt=""> Alberta: $13,552 maximum</li>
 						<li><img src="../flag-bc.jpg" alt=""> BC: $17,131 maximum</li>
